swagger user steup
